<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
     android:gravity="center"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/searchHeaderID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searcg_header"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_header"
        android:textStyle="bold|italic" />

    <TableRow
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/cardview_default_radius"
        android:layout_height="wrap_content">



        <EditText
            android:id="@+id/searchEdNameID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/book_name"
             />
    </TableRow>

    <TableRow
        android:layout_margin="@dimen/cardview_default_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <EditText
            android:id="@+id/searchEdAuthorID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/author" />
    </TableRow>

    <Button
        android:id="@+id/searchBtnSearchID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_now" />


</LinearLayout>