<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/confirmationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:text="@string/sure_text"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
            <Button
                android:layout_marginTop="15dp"
                android:layout_below="@id/confirmationTv"
                android:background="@color/colorAccent"
                android:id="@+id/confirmationBtnNoID"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
            <Button
                android:layout_marginTop="15dp"
                android:layout_below="@id/confirmationTv"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
                android:id="@+id/confirmationBtnYesID"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>